# cosdata-sdk-python

./: .gitignore  README.md  general_tester.py  pyproject.toml  sanity_test.py  test-embed-and-upsert.py  test-full-text-sample.py  test-sample-batch.py  test-sample.py  test-simple-sync.py  test-sparse-sample.py  test-transaction-status.py  test_sample.py
src/: __init__.py
src/cosdata/: __init__.py  client.py  collection.py  index.py  transaction.py  utils.py  vector_utils.py
src/cosdata/api/: __init__.py  auth.py  client.py  collections.py  indexes.py  search.py  streaming_transactions.py  sync_transactions.py  transactions.py  vectors.py  versions.py
