#sample template

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
description = "A sample Python package using setuptools"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black"
]

docs = [
    "mkdocs",
    "mkdocs-material"
]

[project.scripts]
my-script = "my_package.module:main"

[tool.setuptools]
packages = ["my_package"]